# Alive

./: .gitignore  README.md  index.html  package.json  settings.html  tailwind.config.js  vite.config.ts
docs/: alive_latest.json
docs/en/: README.md  alive_mmd.md
pages/: settings.html  updater.html
public/pages/: updater.html
src/: App.vue  main.ts  settings.ts  styles.css  tailwind.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/data/: data_settings.json  sets_alive.json  sets_live2d.json  sets_mmd.json
src-tauri/data/temp/: temp.json
src-tauri/icons/: icon.icns
src-tauri/live2d/: readme.txt
src-tauri/mmd/: readme.txt
src-tauri/mmd/background/磐岩结绿/: Readme.txt  磐岩结绿_形态1.pmx  磐岩结绿_形态2.pmx
src-tauri/mmd/motion/丘丘摇/: read me.txt  丘丘摇.vmd
src-tauri/mmd/motion/奶刀/: 奶刀.vmd  镜头_by_Lct火红枣.vmd
src-tauri/mmd/motion/站姿/: default-cam.vmd  default.vmd
src-tauri/mmd/芙卡洛斯/: 芙卡洛斯.alive_mmd.json  芙卡洛斯.pmx  芙卡洛斯_blending.alive_mmd.json
src-tauri/src/: lib.rs  main.rs
src/components/: Live2d.vue  NumChange.vue
src/components/lang/: en_US.json  zh_CN.json
src/components/live2d/: Live2d.vue  NumChange.vue
src/components/mmd/: MMD.vue  MMDBuilder.ts  MMDBuilder_blending.ts  MMDRuntime.ts  MMDSceneBuilder.ts  parallelLoadAsync.ts
src/components/sets/: AddModelDialog.vue  Live2dSetting.vue  MMDSetting.vue  SettingAll.vue  SettingComp.vue  SettingModels.vue  Settings.vue  settings.ts
src/components/updater/: Updater.vue  updater.ts
src/router/: alive_router.ts
src/theme/: Constants.ts  color.ts  theme.ts
updater/: alive_latest.json
