[package]
name = "alive"
version = "0.0.2"
description = "A Tauri App"
authors = ["TopSea"]
license = ""
repository = "https://github.com/TopSea/Alive"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2.0.0-beta.1"
tauri-plugin-updater = "2.0.0-beta.1"
tauri-plugin-shell = "2.0.0-beta.1"
tauri-plugin-store = "2.0.0-beta.1"
tauri-plugin-autostart = "2.0.0-beta.1"
tauri-plugin-process = "2.0.0-beta.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
